Added dataView Added nuGet BinanceAPI

--- a/PurchasesSaleBinance/PurchasesSaleBinance.csproj
+++ b/PurchasesSaleBinance/PurchasesSaleBinance.csproj
@@ -7,8 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Binance.Net" Version="7.2.5" />
     <PackageReference Include="devexpress.wpf.core" Version="21.1.4" />
     <PackageReference Include="devexpress.wpf.layoutcontrol" Version="21.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
