--- a/PurchasesSaleBinance/Properties/Settings.settings
+++ b/PurchasesSaleBinance/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="API" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="SelectedPairs" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
